--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
 import Banner from '../components/Banner.astro';
+import Accordion from '@/components/Accordion';
+
 ---
 
 <Layout title="Alfred, Asistente de minutas CI.">
@@ -11,7 +12,7 @@ import Banner from '../components/Banner.astro';
 		<div class="max-w-screen-xl mx-auto px-4 py-10">
 			<hr class="mb-10">
 
-
+			<Accordion client:load/>
 		</div>
 	</main>
 </Layout>
