--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,8 @@
 ---
 const { title } = Astro.props;
-import 'animate.css';
-import '../styles/global.css';
+import "animate.css";
+import "../styles/global.css";
 ---
-
 <!doctype html>
 <html lang="en">
 	<head>
