Intento Corregir error YAML

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,8 @@
 import Layout from '../layouts/Layout.astro';
 import Banner from '../components/Banner.astro';
 import Accordion from '@/components/Accordion';
+import "animate.css";
+import "../styles/global.css";
 ---
 <Layout title="Alfred, Asistente de minutas CI.">
 	<main>
