--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,22 +20,22 @@ const { title } = Astro.props;
 <style is:global>
 	@font-face {
 		font-family: din-black;
-		src: url(/alfred-landing/font/DINPRO-BLACK.OTF);
+		src: url(/font/DINPRO-BLACK.OTF);
 	}
 
 	@font-face {
 		font-family: din-bold;
-		src: url(/alfred-landing/font/DINPRO-BOLD.OTF);
+		src: url(/font/DINPRO-BOLD.OTF);
 	}
 
 	@font-face {
 		font-family: din-medium;
-		src: url(/alfred-landing/font/DINPRO-MEDIUM.OTF);
+		src: url(/font/DINPRO-MEDIUM.OTF);
 	}
 
 	@font-face {
 		font-family: din-regular;
-		src: url(/alfred-landing/font/DINPRO-REGULAR.OTF);
+		src: url(/font/DINPRO-REGULAR.OTF);
 	}
 	html {
 		font-family: system-ui, sans-serif;
