Cambio componente HolaSOyAlfred Cambio Título Pagina

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Accordion from '@/components/Accordion';
 import "animate.css";
 import "../styles/global.css";
 ---
-<Layout title="Alfred, Asistente de minutas CI.">
+<Layout title="Hugo, agente de conocimiento.">
 	<main>
 		<Banner/>
 
