--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -3,6 +3,7 @@ import { Picture } from 'astro:assets';
 import bannerDesktop from '../assets/bg-banner.jpg';
 import personaje from '../assets/personaje.png';
 import bgPersonaje from '../assets/bg-personaje.png';
+import TextoTypeWriting from "@/components/TextoTypeWriting";
 ---
 <div class="relative overflow-hidden">
     <div class="h-[500px] w-full min-h-[400px] sm:min-h-[500px] sm:h-[40vw]">
@@ -12,7 +13,7 @@ import bgPersonaje from '../assets/bg-personaje.png';
 
     <div class="absolute top-0 bottom-0  left-[7%] right-[7%]   px-4 flex justify-between sm:items-center z-10 flex-col sm:flex-row pt-10">
         <div class="titulos sm:flex-1">
-            <h1 class="text-6xl sm:text-5xl xl:text-8xl text-white text-shadow font-din-medium  mb-1 animate__animated animate__fadeInDown ">Soy Hugo,</h1>
+            <h1 class="text-6xl sm:text-5xl xl:text-8xl text-white text-shadow font-din-medium  mb-1 min-h-16 sm:min-h-28 animate__animated animate__fadeInDown "><TextoTypeWriting texto={["Soy Hugo,"]} delay={800} client:load/></h1>
             <h2 class="text-xl sm:text-2xl xl:text-4xl text-white text-shadow sm:text-shadow-md font-din-medium  mb-2 animate__animated animate__fadeInLeft !duration-700">Agente de conocimiento<br> de Creatividad e Inteligencia.</h2>
             <h3 class="text-lg sm:text-xl xl:text-2xl text-white text-shadow sm:text-shadow-md  font-din-medium  animate__animated animate__fadeInLeft ">
                 Diseñado in house - versión Beta.
