--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -13,9 +13,9 @@ import TextoTypeWriting from "@/components/TextoTypeWriting";
 
     <div class="absolute top-0 bottom-0  left-[7%] right-[7%]   px-4 flex justify-between sm:items-center z-10 flex-col sm:flex-row pt-10">
         <div class="titulos sm:flex-1">
-            <h1 class="text-6xl sm:text-5xl xl:text-8xl text-white text-shadow font-din-medium  mb-1 min-h-16 sm:min-h-28 animate__animated animate__fadeInDown "><TextoTypeWriting texto={["Soy Hugo,"]} delay={800} client:load/></h1>
-            <h2 class="text-xl sm:text-2xl xl:text-4xl text-white text-shadow sm:text-shadow-md font-din-medium  mb-2 animate__animated animate__fadeInLeft !duration-700">Agente de conocimiento<br> de Creatividad e Inteligencia.</h2>
-            <h3 class="text-lg sm:text-xl xl:text-2xl text-white text-shadow sm:text-shadow-md  font-din-medium  animate__animated animate__fadeInLeft ">
+            <h1 class="text-6xl sm:text-5xl xl:text-8xl text-white text-shadow font-din-medium  mb-1  "><TextoTypeWriting texto={["Soy Hugo,"]} delay={500} client:load/></h1>
+            <h2 class="text-xl sm:text-2xl xl:text-4xl text-white text-shadow sm:text-shadow-md font-din-medium  mb-2 animate__animated animate__fadeInLeft !duration-700 animate__delay-2s">Agente de conocimiento<br> de Creatividad e Inteligencia.</h2>
+            <h3 class="text-lg sm:text-xl xl:text-2xl text-white text-shadow sm:text-shadow-md  font-din-medium  animate__animated animate__fadeInLeft animate__delay-2s ">
                 Diseñado in house - versión Beta.
             </h3>
         </div>
