--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,8 +14,8 @@ const { title } = Astro.props;
 		<title>{title}</title>
 
 		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-D1LCQ6ZG4G"></script>
-		<script>
+		<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-D1LCQ6ZG4G"></script>
+		<script type="text/partytown">
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
